2010-10-21  Junichi Satoh  <junichi@rworks.jp>

	* lib/PandoraFMS/NetworkServer.pm: Deleted FreeBSD specific SNMPGET
	definition. It is the same as Linux.

	* lib/PandoraFMS/Tools.pm: Added FreeBSD specific Ping function.

2010-10-20  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/ReconServer.pm: Pass the recon task group_id and
	  create_incident parameters to the recon script.

2010-10-20  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/ReconServer.pm: Pass the recon task id to the recon
	  script.

2010-10-20  Sancho Lerena <slerena@artica.es>

    * conf/pandora_server.conf.windows: Sample conf for running pandora server
    on Windows (see windows.README).

    * lib/PandoraFMS/NetworkServer.pm: Adapted to have SNMPGET and PING functions
    redefined by each SO, this will allow to have native support on pandora
    to run under different OS (need to check FreeBSD and Solaris!). Windows
    support implemented.

    * lib/PandoraFMS/Core.pm: Removed ping functions here and moved to Tools.pm

    * lib/PandoraFMS/Tools.pm: Adapted Ping functions to work with any SO, at
    this time Linux and Windows only, need to check for Solaris and BSD.

    * util/windows.README: Small doc on how to make Pandora Server work on 
    Windows servers.

    * util/pandora_logrotate: Removed the index in the logrotation.

2010-10-20  Junichi Satoh  <junichi@rworks.jp>

	* util/pandora_server: Added support for chkconfig.

	* util/tentacle_serverd: Divided comments into chkconfig and LSB init.

2010-10-20  Junichi Satoh  <junichi@rworks.jp>

	* util/tentacle_serverd: Added support for chkconfig.

2010-10-19  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/Core.pm
	util/pandora_manage.pl: Moved and renamed the module
	creation from hash function from CLI to Core

2010-10-18  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/DB.pm
	util/pandora_manage.pl: Splitted in 4 parameters the CLI module creation