@@ -1,3 +1,10 @@
+2010-10-21  Sergio Martin <sergio.martin@artica.es>
+
+	* util/recon_scripts
+	util/recon_scripts/PandoraFMS
+	util/recon_scripts/snmpdevices.pl: Added the example recon script
+	that creates several modules for each searched interface
+
 2010-10-21  Junichi Satoh  <junichi@rworks.jp>
 
 	* lib/PandoraFMS/NetworkServer.pm: Deleted FreeBSD specific SNMPGET
